# water

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
dockerfiles/: 3.11-Dockerfile  3.6-Dockerfile  3.9-Dockerfile
docs/: a.py  docs.md  example.md  getting-started.md  index.md  mkdocs.yml  requirements.txt  type-casting-details.md  usage.md  utilities.md  utils.md
examples/: calculator.py  namespaces.py
tests/: module.py  test_arg_cast.py  test_arg_parse.py  test_bad_args.py  test_docs.py  test_flat.py  test_help.py  test_nested.py  test_simple_cli.py  test_utils.py  test_water.py  tests_arg_parse.py
water_cli/: exceptions.py  help_flag.py  helpers.py  parser.py  utils.py
