[tool.poetry]
name = "water_cli"
version = "0.1.9"
description = ""
authors = ["david <davidventura27@gmail.com>"]
readme = 'README.md'
repository = 'https://github.com/DavidVentura/water'

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = { version = "^3.10.0", python = "<3.8" }
dataclasses = { version = "^0.8", python = "<3.7" }
docstring-parser = {version = "^0.8.1", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.2.1"
mkdocs-include-markdown-plugin = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
